--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@
 .form-body{
     width:80%;
     float:left;
-    padding-bottom:40px;
+    margin-bottom:40px;
 }
 
 .form-control{
@@ -263,4 +263,13 @@ table td{
     margin-top: 30px;
     text-align: center;
     font-size: 20px;
+}
+
+.error{
+    margin-top:5px;
+    color: red;
+}
+
+.error_order{
+    margin-left: 200px;
 }
