--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,8 +110,6 @@ small{
     height:100%;
 }
 
-
-
 .message{
     
     float:left;
@@ -135,7 +133,6 @@ small{
 }
 
 .overview2{
-    
     float: right;
     background-color:white;
     padding:10px ;
@@ -152,15 +149,14 @@ small{
 
 .button{
    width:30%; 
-   margin:80px auto;
+   margin:50px auto;
 }
 .text{
     background-color: #49a9d4;
     padding:20px 0;
     margin:0 auto;
-    
-   
 }
+
 .button_link{
     text-align: center;
     background-color: #49a9d4;
@@ -271,5 +267,10 @@ table td{
 }
 
 .error_order{
-    margin-left: 200px;
+    margin-left: 260px;
+}
+
+.box-header{
+    width:70%;
+    margin:0 auto;
 }
