--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,13 +106,13 @@ h3{
     opacity:0.7;
 }
 .box{
-    float:left;
-    width:33%;
+    
+    
     padding:20px;
 }
 
 .box-in{
-    height:260px;
+    height:300px;
     position: relative;
     background-color: white;
     border: 1px solid #f6f8fa;
@@ -408,4 +408,9 @@ table td{
     margin-right: 10px;
     text-align: center;
     border-right: 1px solid rgba(255,255,255,0.4);
+}
+
+.pagination{
+   width:10%;
+   margin: 0 auto;
 }
